minor changes to lab MNIST added

--- a/MNIST recognition2.ipynb
+++ b/MNIST recognition2.ipynb
@@ -520,6 +520,13 @@
     "$\\mathbf{V}$  is matrix, which columns are egenvectors of $\\mathbf{C}$. Columns of $\\mathbf{V}$ are called principial axes. We can see that $\\mathbf{C}$ is covariance matrix only if $\\mathbf{X}$ is centered.\n",
     "$$Cov(X_i,X_j) = \\dfrac{1}{N-1}\\sum_{n=1}^{N} (X_i – \\bar{X_i})^{T}(X_j – \\bar{X_j}))= \\dfrac{1}{N-1}\\sum_{n=1}^{N} (X_i – 0)^{T}(X_j – 0))= \\dfrac{1}{N-1}\\sum_{n=1}^{N} X_i^{T}X_j$$ \n",
     "PCA selects principial axes based on variance, where eigenvalues $\\lambda_i$ show variances of the respective principial components. That means, that if some of our features were scaled or just have different units, their variance is also changed and this will affect PCA.\n",
+    "\\begin{gather}\n",
+    "\\mathbf{C = \\dfrac{1}{N-1} X^TX} \\\\\n",
+    "\\mathbf{X = USV^{T}}\\\\\n",
+    "\\mathbf{C = \\dfrac{1}{N-1}VS^{T}U^{T}USV^{T} = \\dfrac{1}{N-1}VS^{2}V^{T}} \\\\\n",
+    "\\text{Principal Components:}\\\\\n",
+    "\\text{Principal Components}=\\mathbf{XV = USV^{T}V = US}\n",
+    "\\end{gather}\n",
     "\n",
     "Lets do an experiment: \n",
     "* we will generate 2D normally distributed, not centered data. \n",
@@ -528,7 +535,8 @@
     "    * not centered data\n",
     "    * centered data\n",
     "    * scaled data\n",
-    "\n"
+    "\n",
+    "And because sklearn implementation of PCA does centering of X by default, we will do a very simple implementation of PCA just using eig decomposition of covariance matrix."
    ]
   },
   {
@@ -570,7 +578,7 @@
     "    n_samples, n_features = X.shape\n",
     "    \n",
     "    C = X.T @ X /( n_samples - 1)\n",
-    "    #d -eigenvalues principal_axes = V\n",
+    "    #d -eigenvalues, principal_axes = V\n",
     "    d, principal_axes = eig(C)\n",
     "    idx = d.argsort()[::-1]\n",
     "    \n",
@@ -1404,7 +1412,7 @@
    "source": [
     "Columns of $\\mathbf{U_k}$ have same dimension as columns of data matrix $\\mathbf{X}$, so they form an orthonormal  basis of for the column space of $\\mathbf{X}$, ordered by their importance (or in other words, ability to explain variance of $\\mathbf{X}$). Their importance proportional to corresponding singular values. We can think of $\\mathbf{U_k}$ as a basis of column space which captures the most dominant features of columns of $\\mathbf{X}$. Also we can decompose matrix $\\mathbf{X}$ into layers:\n",
     "$$\\mathbf{X} = \\sigma_1U_1V_1^{T}+\\sigma_2U_2V_2^{T}+\\dots+\\sigma_mU_mV_m^{T}$$\n",
-    "Or in another words: every column of  $\\mathbf{X_k}$ is cobination of columns $\\mathbf{U_i}$ taken with coeficients from column of $\\mathbf{V_k}^{T}$ miltiplied by $\\sigma_i$. And because $\\sigma_i$ are sorted the importance of layers is decreasing with i."
+    "The intensity of each layer decreases because each $\\sigma_{i+1} \\leq \\sigma_{i}$. Or in another words: every column of  $\\mathbf{X_k}$ is cobination of columns $\\mathbf{U_i}$ taken with coeficients from column of $\\mathbf{V_k}^{T}$ miltiplied by $\\sigma_i$. And because $\\sigma_i$ are sorted the importance of layers is decreasing with i."
    ]
   },
   {
