--- a/final-project.ipynb
+++ b/final-project.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 96,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 97,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "'ello orld \\n'"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 99,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        " 'q': 0.0001369138738906699}"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 101,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 102,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "0.054000000000000006"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 104,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 105,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "0.0018000000000000004"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 107,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "0.00018000000000000004"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "6.866455078125001e-10"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "0.0"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 111,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "-6.319968614080018"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "-1231.2240885070605"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 114,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 115,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
        "'English'"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "'Polish'"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
        "'Italian'"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 119,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 120,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 121,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 122,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "'German'"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "'English'"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 125,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 126,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
        "0.2686381464045339"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
        "0.534626604689872"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
        "0.36596793151737517"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "0.12095519926831602"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,18 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert abs(bayesian_posterior(\"The\", lang_to_probs, lang_to_prior, \"German\") - 0.26863814640) < 0.00001\n",
-    "assert abs(bayesian_posterior(\"The\", lang_to_probs, lang_to_prior, \"English\") - 0.534626604) < 0.00001\n",
-    "assert abs(bayesian_posterior(\"Das\", lang_to_probs, lang_to_prior, \"English\") - 0.365967931517) < 0.00001"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 132,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1267,7 +1256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1281,7 +1270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
